# salk

./: CMakeLists.txt
Hodhr/: CMakeLists.txt  main.cpp
Hodhr.xcodeproj/: project.pbxproj
Hodhr.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Hodhr.xcodeproj/xcshareddata/xcschemes/: Hodhr.xcscheme
Hodhr.xcodeproj/xcuserdata/rdickerson.xcuserdatad/xcschemes/: xcschememanagement.plist
Hodhr.xcodeproj/xcuserdata/rfdickerson.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Hodhr.xcodeproj/xcuserdata/rfdickerson.xcuserdatad/xcschemes/: xcschememanagement.plist
Hodhr/core/: actor.cc  actor.cpp  actor.h  actor.hpp  component.cc  component.cpp  component.h  component.hpp  engine.cc  engine.h  event.cc  event.cpp  event.h  event.hpp  mouse_event.cc  mouse_event.cpp  mouse_event.h  mouse_event.hpp  scene.cc  scene.cpp  scene.h  scene.hpp
Hodhr/graphics/: camera_component.cc  camera_component.cpp  camera_component.h  camera_component.hpp  geometry_component.cc  geometry_component.cpp  geometry_component.h  geometry_component.hpp  renderer.cc  renderer.h  shader.cc  shader.cpp  shader.hpp  window.cc  window.h
resources/shaders/: physical.frag.glsl  physical.vert.glsl
